--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>Wellcome</h1>
-<h2>In this table you can find few Repos found in Bosch.io gitHUB page</h2>
+<h2>In this table you can find few Repos from Bosch.io gitHUB page</h2>
 
-<table mat-table matSort [dataSource]="repos">
+<table mat-table [dataSource]="repos">
 <!--Template for Name column-->
 <ng-container matColumnDef="repoName">
 <th id="name" mat-header-cell *matHeaderCellDef mat-sort-header>Repo Name</th>
