--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,25 +1,33 @@
+div {
+  
+  margin-left: 150px;
+  margin-right: 150px;
+  background-color: lightgray;
+}
+
 h1 {
   font-family: 'Courier New', Courier, monospace;
-  margin-left: 150px;
+  margin-left: 140px;
 }
 h2 {
   font-family: Lato;
   font-style: italic;
-  margin-left: 150px;
+  margin-left: 140px;
 }
 
-table {
-  margin-left: 150px;
-  margin-right: 150px;
-  border-bottom-color: grey;
+label {
+  font-family: Lato;
+  font-style: italic;
 }
 
 .name {
   text-align: left;
+  width: 15%;
 }
 
 .descr {
   text-align: left;
+  width: 30%;
 }
 
 .rurl {
@@ -27,11 +35,24 @@ table {
 }
 
 th{
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Times New Roman';
+  font-style: oblique;
 }
 
 td {
   text-align: center;
   margin-inline: 10px;
-  border-bottom-right-radius: 20%;
+}
+
+.filter {
+  align-items: flex-end;
+  min-height: 64px;
+  padding: 8px 140px;
+}
+
+input {
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-style: ridge;
 }
